# Desigo-System-Health-Reporting

./: .gitignore  pyproject.toml
desigo_sensor_reporting/: __init__.py  components.py  firestore.py  parsers.py
