[tool.poetry]
name = "desigo-sensor-reporting"
version = "0.1.0"
description = ""
authors = ["Andrew <andrew@aceiotsolutions.com>"]
readme = "README.md"
packages = [{include = "desigo_sensor_reporting"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
openpyxl = "^3.1.2"
google-cloud-firestore = "^2.11.0"
firebase-admin = "^6.1.0"
streamlit-option-menu = "^0.3.2"
plotly = "^5.14.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
